--- a/show_pages_shop/templates/particulars_page_bottom.html
+++ b/show_pages_shop/templates/particulars_page_bottom.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>货比三家</title>
+    <title>万家乐</title>
     <style>
         body{
             background-color: white;
